tests/__snapshots__/api-it.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles nested 'it()': stderr 1`] = `
"Error: 'describe()' cannot be nested within 'it()' helper.

  2 | 
  3 | it("is string?", () => {
> 4 |   describe("nested describe is handled?", () => {
    |   ^
  5 |     expect<number>().type.toBeNumber();
  6 |   });
  7 | 

      at ./__typetests__/it-nested.tst.ts:4:3

Error: 'it()' cannot be nested within 'it()' helper.

   6 |   });
   7 | 
>  8 |   it("nested test is handled?", () => {
     |   ^
   9 |     expect<never>().type.toBeNever();
  10 |   });
  11 | 

       at ./__typetests__/it-nested.tst.ts:8:3

"
`;

exports[`handles nested 'it()': stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/it-nested.tst.ts

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Duration:   <<timestamp>>

Ran test files matching 'nested'.
"
`;

exports[`it.only: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/it-only.test.ts
  + is only?
  - skip is skipped?
  + is only too?
  - todo is todo?
  - skip is skipped too?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      2 skipped, 1 todo, 2 passed, 5 total
Assertions: 2 skipped, 2 passed, 4 total
Duration:   <<timestamp>>

Ran test files matching 'only'.
"
`;

exports[`it.skip: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/it-skip.test.ts
  - skip is skipped?
  + is string?
  - skip is skipped too?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      2 skipped, 1 passed, 3 total
Assertions: 1 passed, 1 total
Duration:   <<timestamp>>

Ran test files matching 'skip'.
"
`;

exports[`it.todo: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/it-todo.test.ts
  - todo is todo?
  + is string?
  - todo is todo too?
  - todo and this one is todo?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      3 todo, 1 passed, 4 total
Assertions: 1 passed, 1 total
Duration:   <<timestamp>>

Ran test files matching 'todo'.
"
`;
